Split drop down and filters apart

--- a/app/assets/stylesheets/partials/modules/_filters.scss
+++ b/app/assets/stylesheets/partials/modules/_filters.scss
@@ -3,74 +3,58 @@
 */
 
 .filters {
-  @include font-size($font-size-sml);
+  label { display: block; }
+  [type="checkbox"] { @include to-rem(margin-right, $spacing-quarter); }
 
-  // Drop down pointer
-  .drop-down:before {
-    position: absolute;
-    top: 0;
-    // margin-top: ; // height of arrow
-    content: "^";
-    border: 1px solid red;
+  .filters__input-txt {
+    @include prefix(box-sizing, border-box);
+    @include to-rem(padding, $spacing-half);
+    font-style: italic;
+    color: $color-light-txt;
+    border-radius: $border-radius;
+    border: 1px solid $color-grey-1;
+    width: 100%;
+  }
+}
+
+  .filters__range {
+    @include to-rem(padding, $spacing-half);
+
+    .filters__banner {
+      @include to-rem(margin, -$spacing-half);
+      @include to-rem(margin-bottom, $spacing-half);
+    }
   }
 
-  .filters__list { position: relative; }
+    .filters__range__inner {
+      position: relative;
 
-    // Wraps up hdr && search
-    .filters__banner {
-      border-bottom: 1px solid $color-grey-1;
-      background-color: $color-off-white;
-    }
+      .filters__input-txt {
+        width: 40%;
 
-      // Wrapper for back button, title and apply (palm)
-      // Wrapper for title (other)
-      .filters__hdr,
-      .filters__trigger {
-        position: relative;
-        @include to-rem(padding, $spacing-half 0);
-        @include font-size($font-size);
-        font-weight: normal;
-        text-align: center;
-        color: $color-light-txt;
-        border-bottom: 1px solid $color-grey-1;
-        background-color: $color-off-white;
-      }
-
-        // Back button (only seen on palm)
-        .filters__hdr .btn {
+        &:last-child {
           position: absolute;
-          top: 50%;
-          @include to-rem(margin-top, -8); // half the height
-          @include to-rem(left, $spacing-half);
-        }
-
-      .filters__search {
-        @include to-rem(padding, $spacing-half);
-
-        input {
-          @include prefix(box-sizing, border-box);
-          @include to-rem(padding, $spacing-half);
-          font-style: italic;
-          color: $color-light-txt;
-          border-radius: $border-radius;
-          border: 1px solid $color-grey-1;
-          width: 100%;
+          top: 0;
+          right: 0;
         }
       }
 
-    dl { margin-bottom: 0; }
-
-    // List items
-    dd {
-      @include to-rem(padding, $spacing-half);
-      @include font-size($font-size-sml);
-      border-bottom: 1px solid $color-grey-1;
-
-      label { display: block; }
-      [type="checkbox"] { @include to-rem(margin-right, $spacing-quarter); }
-      .btn { line-height: 1.5; }
-      &:last-child { border-bottom: 0; }
+      span {
+        position: absolute;
+        top: 50%;
+        @include to-rem(margin-top, -10);
+        left: 50%;
+        @include to-rem(margin-left, -5);
+      }
     }
+
+
+    // Search field
+    .filters__search {
+      @include to-rem(padding, $spacing-half);
+      border-bottom: 1px solid $color-grey-1;
+    }
+
 
     // Apply filter button (used on multi-facet lists)
     .filters__apply {
@@ -79,4 +63,5 @@
       @include to-rem(top, $spacing-quarter);
       @include to-em(padding-left padding-right, $spacing-base);
     }
-}
+
+  .filters__sale label { display: inline }
