Added correct markup for Cinema images.

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,9 +1,9 @@
 <div id='store_info'>
   <!-- retailer banner -->
-  <%= @cinema.store_front %>
+  <%= image_tag @cinema.store_front_image_url, alt:@cinema.name %>
 
   <!-- retailer logo -->
-  <%= @cinema.logo %>
+  <img src="<%= @cinema.retailer_logo_url %>" alt="<%= @cinema.store_name %> logo">
 
   <!-- phone number -->
   <span class="phone_number"><%= @cinema.phone_number %></span>
