--- a/app/assets/stylesheets/partials/layout/_containers.scss
+++ b/app/assets/stylesheets/partials/layout/_containers.scss
@@ -14,3 +14,12 @@
 		width: auto;
 	}
 }
+
+.container--wide {
+  width: auto;
+  max-width: none;
+}
+
+.container--narrow {
+  @include to-rem(max-width, $page-container-max-width-narrow);
+}
