--- a/app/assets/stylesheets/partials/utils/_vars.scss
+++ b/app/assets/stylesheets/partials/utils/_vars.scss
@@ -166,6 +166,8 @@ $ipad-landscape: 1024 !default;
 /* Page container max width - don't forget to update in 'old-ie.scss' */
 $page-container-max-width: 1600 !default;
 
+$page-container-max-width-narrow: 980 !default;
+
 /* --Grid-- */
 
 /* Gutter */
