--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -86,6 +86,7 @@ Global stylesheet
 @import "partials/layout/main";
 @import "partials/layout/footer";
 @import "partials/layout/nav-contextual";
+@import "partials/layout/hero";
 
   /* Layout -> Grid */
   @import "partials/layout/grid/grid";
@@ -131,7 +132,7 @@ Global stylesheet
 @import "partials/modules/drop-down-menu";
 @import "partials/modules/stores-maps";
 @import "partials/modules/filters";
-
+@import "partials/modules/hours";
 
   /* Modules -> Widgets */
   @import "partials/modules/widgets/accordion";
