Use a ghost element for the calculated header height

--- a/app/assets/stylesheets/partials/layout/_header.scss
+++ b/app/assets/stylesheets/partials/layout/_header.scss
@@ -1317,3 +1317,6 @@ $hero-banner-height-lrg: 380 !default;
 				/* Focus */
 				&:focus {outline: none;}
 			}
+
+/* Ghost element added to the dom to accomodate for fixed header with variable height (between viewports) */
+.header-height-ghost {min-height: 88px;}
