Added global rule for search element appearance

--- a/app/assets/stylesheets/partials/forms/_base.scss
+++ b/app/assets/stylesheets/partials/forms/_base.scss
@@ -35,6 +35,9 @@ textarea {
 	resize: vertical;
 }
 
+/* Search fields */
+input[type="search"] {@include prefix(appearance, none);}
+
 /* Select list */
 select {width: auto;}
 
