--- a/app/views/products/new-index.html.erb
+++ b/app/views/products/new-index.html.erb
@@ -36,7 +36,7 @@
 
   <script type="text/ng-template" id="FilterItemBackButton">
     <button class="btn">
-      <span class="icon icon--arrow-left-big icon--lrg icon--flush-top" aria-hidden="true">
+      <span class="hide-fully--non-palm icon icon--arrow-left-big icon--lrg icon--flush-top" aria-hidden="true">
       <span class="hide-visually">Back</span>
     </button>
   </script>
