making 'store details' button clickable for detail view maps and setting up structure for 'Stores'

--- a/app/assets/stylesheets/partials/layout/_main.scss
+++ b/app/assets/stylesheets/partials/layout/_main.scss
@@ -15,7 +15,5 @@
   }
 
   /* Make full height of the viewport for 'Stores' */
-  .stores & {
-    height: 100%;
-  }
+  .stores & {height: 100%;}
 }
