--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,4 +1,5 @@
 <div class="stores-maps">
+  <h1 class="hide-visually">Stores</h1>
   <div class="map-micello">
     <%= render partial: 'shared/map', locals: {store_id: nil, interactive: true} %>
   </div>
