--- a/app/views/shared/_map.html.erb
+++ b/app/views/shared/_map.html.erb
@@ -4,7 +4,7 @@
 <!--[if gt IE 8]><!-->
 	<p class="feedback feedback--warning js-enabled-hide">You need JavaScript enabled to view this map. <a href="http://enable-javascript.com/" rel="external">Visit here</a> for instructions on how to enable JavaScript.</p>
   <div id="map" class="map-micello__api js-disabled-hide"><span class="preloader preloader--light"><span class="preloader__spinner"></span><em class="hide-visually">Loading, please wait&#8230;</em></span></div>
-  <div class="map-popup__content">
+  <div class="map-micello__overlay-wrap">
     <% if interactive %>
       <%= render partial: 'shared/map_popups/interactive' %>
     <% else %>
