makes centre levels for ie maps dynamic

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -133,6 +133,7 @@ Global stylesheet
   @import "partials/modules/widgets/flexslider";
   @import "partials/modules/widgets/adaptive-google-map";
   @import "partials/modules/widgets/map-micello";
+  @import "partials/modules/widgets/map-ie";
   @import "partials/modules/widgets/modal";
   @import "partials/modules/widgets/social-media-share";
   @import "partials/modules/widgets/tabs";
