--- a/app/views/shared/_map.html.erb
+++ b/app/views/shared/_map.html.erb
@@ -1,22 +1,22 @@
 <!--[if lte IE 8]>
-  <div id="map" class="map map--ie-support">
+  <div id="map" class="map map--ie-support <%= 'map--non-interactive' unless interactive %>">
     <div class="zoom">
       <div class="zoom__in">+</div>
       <div class="zoom__out">-</div>
     </div>
     <div class="level-select">
-      <% (1..6).to_a.reverse.each do |level| %>
+      <% (1...@centre.number_of_levels).to_a.reverse.each do |level| %>
         <div class="level-select__level" data-level="<%= level %>"><%= level %></div>
       <% end %>
     </div>
     <div class="container">
-      <% (1..6).each do |level| %>
+      <% (1...@centre.number_of_levels).each do |level| %>
         <img class="hidden" data-level="<%= level %>" src="<%= image_path("centre/#{@centre.micello_community}_#{level}.png") %>"/>
       <% end %>
     </div>
     <%= javascript_include_tag 'map' %>
     <%= javascript_tag do %>
-      new IEMap
+      new IEMap({select: <%= store_id || 'null' %>})
     <% end %>
   </div>
 <![endif]-->
