Added page titles
It is used for:

- Page title
- social shares

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -178,13 +178,13 @@
 			<nav role="navigation" aria-label="Main navigation">
 					<ul class="nav-main horiz-list horiz-list--fit horiz-list--center horiz-list--dividers">
 					  <li><%= link_to centre_stores_path(params[:centre_id] || params[:id]),
-					    :class => page?(:stores) do %><span class="icon icon--store" aria-hidden="true"></span><span class="hide-visually"> Stores</span><% end %></li>
+					    :class => (page?(:stores) ? 'is-active' : nil) do %><span class="icon icon--store" aria-hidden="true"></span><span class="hide-visually"> Stores</span><% end %></li>
 					  <li><%= link_to centre_products_path(params[:centre_id] || params[:id]),
-					    :class => page?(:products) do %><span class="icon icon--products icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Products</span><% end %></li>
+					    :class => (page?(:products) ? 'is-active' : nil) do %><span class="icon icon--products icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Products</span><% end %></li>
 					  <li><%= link_to centre_deals_path(params[:centre_id] || params[:id]),
-					    :class => page?(:deals) do %><span class="icon icon--deals icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Deals</span><% end %></li>
+					    :class => (page?(:deals) ? 'is-active' : nil) do %><span class="icon icon--deals icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Deals</span><% end %></li>
 					  <li><%= link_to centre_events_path(params[:centre_id] || params[:id]),
-					    :class => page?(:events) do %><span class="icon icon--events" aria-hidden="true"></span><span class="hide-visually"> Events</span><% end %></li>
+					    :class => (page?(:events) ? 'is-active' : nil) do %><span class="icon icon--events" aria-hidden="true"></span><span class="hide-visually"> Events</span><% end %></li>
 					</ul>
 			</nav>
 			<!-- //Main navigation -->
