--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 	<!-- //Prefetch DNS for external assets -->
 
 	<!-- Title -->
-	<title><%= @title || "Home" %> | Westfield</title>
+	<title><%= page_title %> | Westfield</title>
 	<!-- //Title -->
 
 	<%= render "shared/stylesheets_global" %>
