--- a/app/views/shared/detail_view/_controls.html.erb
+++ b/app/views/shared/detail_view/_controls.html.erb
@@ -6,7 +6,7 @@
       <button type="button" class="detail-view__controls__btn btn"><span class="icon icon--favs icon--lrg icon--spacing-lrg" aria-hidden="true"></span>Save</button>
     </li><!--
     --><li>
-        <%= render "/shared/social_share" %>
+        <%= render "/shared/social_share" title: page_title, image: page_image %>
     </li>
   </ul>
 
