--- a/app/assets/stylesheets/old-ie.scss
+++ b/app/assets/stylesheets/old-ie.scss
@@ -30,6 +30,8 @@ $fix-mqs: 1600;
 /* Import everything from 'application.scss' */
 @import "application";
 
+/* Import extra styling for maps */
+@import "partials/modules/widgets/map-ie";
 
 /* ======================================================================================
    @OLD IE NOTIFICATION
