--- a/app/assets/stylesheets/partials/modules/widgets/_map-ie.scss
+++ b/app/assets/stylesheets/partials/modules/widgets/_map-ie.scss
@@ -1,45 +1,4 @@
-.stores-map-content {
-  position: absolute;
-  @include to-rem(top, 110);
-  bottom: 0;
-  left: 0;
-  right: 0;
-
-  ul {
-    background-color: #fff;
-    border-right: 1px solid #bababa;
-    overflow: auto;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    @include to-rem(width, 450);
-
-    li {
-      @include to-rem(padding, 10 20);
-      border-bottom: 1px solid #bababa;
-
-      &.list__store {
-        position: relative;
-        @include to-rem(padding-left, 120);
-
-        img {
-          position: absolute;
-          @include to-rem(top, 10);
-          @include to-rem(left, 20);
-          @include to-rem(width, 60);
-          @include to-rem(height, 60);
-        }
-      }
-
-      &.list__heading {
-        background-color: #e8e8e8;
-      }
-    }
-  }
-}
-
-#map {
+#map.map--ie-support {
   $background-color: #e9e6e3; 
   background-color: $background-color;
   position: absolute;
@@ -52,26 +11,6 @@
   #micello-map #ui-levels-floors-container {
     background-color: $background-color;
   }
-}
-
-.store-location {
-  position: relative;
-  @include to-rem(height, 400);
-
-  #ui-name, #ui-geo {
-    opacity: 1 !important;
-    display: block !important;
-  }
-
-  #ui-zoom, #ui-levels {
-    display: none !important;
-  }
-}
-
-#map.map--ie-support {
-  position: absolute;
-  bottom: 0;
-  right: 0;
 
   .hidden {
     display: none !important;
@@ -143,10 +82,10 @@
       }
     }
   }
-}
 
-.map--non-interactive {
-  .zoom, .level-select {
-    display: none;
+  &.map--non-interactive {
+    .zoom, .level-select {
+      display: none;
+    }
   }
 }
