adding new module

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -133,6 +133,7 @@ Global stylesheet
 @import "partials/modules/stores-maps";
 @import "partials/modules/filters";
 @import "partials/modules/pill";
+@import "partials/modules/stores-list";
 
   /* Modules -> Widgets */
   @import "partials/modules/widgets/accordion";
